--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ buildscript {
   }
 }
 apply plugin: 'me.champeau.jbake'
+apply from: 'publish.gradle'
 
 task wrapper(type: Wrapper) {
   gradleVersion = '2.10'
